--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- <div class="container"> -->
         <div class="row header">
             <div class="col s6 m12 #eeeeee grey lighten-3">
-                <span class="flow-text">Page Title</span>
+                <span class="flow-text" ><center><strong><h1>Capture The Moment</h1></strong></center></span>
             </div>
         </div>
 
@@ -69,7 +69,7 @@
                 <hr>
             </div>
             <div class="col s6 m3 #eeeeee grey lighten-3">
-                <p>Here will show the main mood (from facial recognition API)</p>
+                <p>Generated buttons based on image.<br>Click a button!</p>
             </div>
             
         </div>
@@ -84,7 +84,7 @@
             <div class="col s6 m3 #eeeeee grey lighten-3">
                 <p>Giphy to choose from
                     <br>
-                    (save and use later)
+                    (Right click and save for later.)
                 </p>
             </div>
         </div>
